--- a/www/styrelsen.html
+++ b/www/styrelsen.html
@@ -5,7 +5,7 @@
         <td>Ordförande</td>
       </tr>
       <tr>
-        <td>Natalia Erazo Johansson</td>
+        <td>Natalia Erazo Jonsson</td>
         <td>Ledamot</td>
       </tr>
       <tr>
