update case sensitive image files

--- a/www/gallery.html
+++ b/www/gallery.html
@@ -54,7 +54,7 @@
         </section>
 
         <section class="spotlight">
-          <div class="image"><img src="images/hiss.JPG" alt="" /></div>
+          <div class="image"><img src="images/hiss.jpg" alt="" /></div>
           <div class="content">
           </div>
         </section>
@@ -66,7 +66,7 @@
         </section>
 
         <section class="spotlight">
-          <div class="image"><img src="images/innergard.JPG" alt="" /></div>
+          <div class="image"><img src="images/innergard.jpg" alt="" /></div>
           <div class="content">
             <h2>
               Innergård
