--- a/www/faq.html
+++ b/www/faq.html
@@ -28,8 +28,11 @@
               <div id="menu">
                 <ul>
                   <li><a href="index.html">Hem</a></li>
-                  <li><a href="generic.html">Generic</a></li>
-                  <li><a href="elements.html">Elements</a></li>
+                  <li><a href="index.html#about">Om(kring)</a></li>
+                  <li><a href="index.html#board">Kontakt</a></li>
+                  <li><a href="index.html#services">Mäklarinfo</a></li>
+                  <li><a href="index.html#footer">Länkar</a></li>
+                  <li><a href="gallery.html">Bilder</a></li>
                 </ul>
               </div>
             </li>
